# mcp-dependency-health

./: .gitignore  README.md  main.py  pyproject.toml
schemas/: input.py  output.py
src/: server.py
src/services/: changelog_fetcher.py  error_handlers.py  registry_clients.py
tests/: test_file_finder.py  test_parsers_js.py  test_parsers_py.py  test_registry_clients.py  test_server_sanity.py  test_versions.py
utils/: file_finder.py  parsers.py  versions.py
