[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-dependency-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["schemas", "utils", "src"]

[tool.pytest.ini_options]
pythonpath = ["."]
